sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: not found: value i
    i=0
    ^AlgCombSort:9: error: not found: value i
    while (i+ecart<getNombreValeur()){
           ^AlgCombSort:9: error: not found: value getNombreValeur
    while (i+ecart<getNombreValeur()){
                   ^AlgCombSort:10: error: not found: value i
      if( plusPetit(i,i+ecart)){
                    ^AlgCombSort:10: error: not found: value i
      if( plusPetit(i,i+ecart)){
                      ^AlgCombSort:11: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:11: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:12: error: not found: value i
        i+=1
        ^